--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "jdvorak23/qr-faktura",
+  "name": "jdvorak23/qr-platba",
   "description": "PHP knihovna pro generování QR Platba dle standardu",
   "minimum-stability": "dev",
   "license": "MIT",
